Improved POM file